<resources>
    <string name="app_name">Trucker</string>
    <string name="trucker_app">Trucker App</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account_sign_in">Already have an account? SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="send">Send</string>
    <string name="back_to_signin">Back to SignIn</string>
    <string name="rs">Rs.</string>
    <string name="messages">Messages</string>

</resources>